# madrasa_management_in_rust

./: .dockerignore  .env.example  .gitignore  ACTION_ITEMS_AND_FIXES.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CRITICAL_ISSUES_AND_SETUP.md  Cargo.toml  Dockerfile.api  Dockerfile.web  EXECUTIVE_SUMMARY.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  LOCAL_DEVELOPMENT_SETUP.md  PROJECT_COMPLETE.md  PROJECT_PLAN.md  QUICK_REFERENCE.md  QURAN_FINANCE_MODULES.md  README.md  STAFF_REGISTRY_IMPLEMENTATION.md  START_HERE.md  docker-compose.yml  setup-local-dev.ps1  setup-local-dev.sh  test_reports_api.py
apps/api/: Cargo.toml
apps/api/src/: app.rs  auth.rs  config.rs  error.rs  main.rs
apps/api/src/modules/: academics.rs  audit_compliance.rs  communication.rs  finance.rs  identity_access.rs  mod.rs  platform_ops.rs  quran_module.rs  reports_analytics.rs  staff_registry.rs  student_registry.rs  tenant_admin.rs
apps/api/src/modules/audit_compliance/: model.rs  service.rs
apps/api/src/modules/finance/: dto.rs
apps/api/src/modules/identity_access/: dto.rs  service.rs
apps/api/src/modules/quran_module/: dto.rs
apps/api/src/modules/staff_registry/: dto.rs
apps/api/src/modules/student_registry/: dto.rs
apps/web/: Cargo.toml
apps/web/src/: api.rs  auth.rs  lib.rs  main.rs  ui.html
apps/web/src/components/: common.rs  layouts.rs  mod.rs
apps/web/src/pages/: dashboard.rs  login.rs  mod.rs
backend/: main.py  requirements.txt
backend/app/api/: deps.py
backend/app/api/v1/: bulk_operations.py  (+5 more)
backend/app/core/: bulk_operations.py  config.py  export_service.py  search_service.py  seed.py
backend/app/models/: report_template.py  role.py  saved_search.py  user.py
backend/migrations/versions/: 0008_add_report_templates.py  140749c1ed9b_add_role_templates_and_template_.py
crates/db/: Cargo.toml
crates/db/src/: context.rs  lib.rs  models.rs  repositories.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  request_id.rs
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/hooks/: useAuth.js
frontend/src/stores/: authStore.js
frontend/src/utils/: apiClient.js
infra/nginx/: default.conf
migrations/: 0001_init.sql
students_data_store/: Dockerfile
students_data_store/src/: App.jsx
students_data_store/src/pages/: AdvancedSearchPage.jsx  BulkOperationsPage.jsx  ReportsPage.jsx  RoleTemplatesPage.jsx
(+7 files in other folders)
