[workspace]
members = [
  "apps/api",
  "crates/shared",
  "crates/db"
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["trace", "compression-full", "cors", "request-id"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
jsonwebtoken = "9"
validator = { version = "0.18", features = ["derive"] }
redis = { version = "0.25", features = ["tokio-comp"] }
argon2 = "0.5"
