[package]
name = "madrasa-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
validator.workspace = true
redis.workspace = true
argon2.workspace = true
shared = { path = "../../crates/shared" }
db = { path = "../../crates/db" }
